--- a/WindowExplorer/Sources/Controllers/MediaControllers/PDFViewControlller/PDF.storyboard
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/PDFViewControlller/PDF.storyboard
@@ -14,20 +14,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="522"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <pdfView autoresizesSubviews="NO" wantsLayer="YES" displayMode="singlePage" translatesAutoresizingMaskIntoConstraints="NO" id="LrV-6C-x9X" userLabel="PDF View">
+                            <pdfView autoresizesSubviews="NO" wantsLayer="YES" focusRingType="none" displayMode="singlePage" translatesAutoresizingMaskIntoConstraints="NO" id="LrV-6C-x9X" userLabel="PDF View">
                                 <rect key="frame" x="116" y="8" width="516" height="506"/>
                             </pdfView>
-                            <button translatesAutoresizingMaskIntoConstraints="NO" id="Qqy-Lr-eU7">
-                                <rect key="frame" x="592" y="474" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="1B3-2y-eX9"/>
-                                    <constraint firstAttribute="width" constant="40" id="aBh-FU-5GM"/>
-                                </constraints>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="mN3-of-VMc">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                            </button>
                             <pdfThumbnailView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B0g-yS-hPA" userLabel="PDF Thumbnail View">
                                 <rect key="frame" x="8" y="8" width="100" height="506"/>
                                 <constraints>
@@ -48,20 +37,32 @@
                                 </constraints>
                             </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="7qF-ve-yFy">
-                                <rect key="frame" x="592" y="474" width="40" height="40"/>
+                                <rect key="frame" x="600" y="482" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="uOj-zf-AF7"/>
                                     <constraint firstAttribute="width" constant="40" id="zTi-dq-EYp"/>
                                 </constraints>
                             </customView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="Qqy-Lr-eU7">
+                                <rect key="frame" x="610" y="492" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="1B3-2y-eX9"/>
+                                    <constraint firstAttribute="width" constant="20" id="aBh-FU-5GM"/>
+                                </constraints>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="enlarge-icon" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="mN3-of-VMc">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Qqy-Lr-eU7" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="1kX-hE-Zhc"/>
-                            <constraint firstItem="7qF-ve-yFy" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="30d-db-Lx3"/>
+                            <constraint firstItem="7qF-ve-yFy" firstAttribute="centerY" secondItem="Qqy-Lr-eU7" secondAttribute="centerY" id="HX7-im-F6b"/>
                             <constraint firstItem="dYk-YZ-F2X" firstAttribute="leading" secondItem="LrV-6C-x9X" secondAttribute="leading" id="HuI-op-lpm"/>
                             <constraint firstItem="dYk-YZ-F2X" firstAttribute="bottom" secondItem="LrV-6C-x9X" secondAttribute="bottom" id="KSR-bh-laj"/>
+                            <constraint firstItem="Qqy-Lr-eU7" firstAttribute="top" secondItem="l0O-E9-8FM" secondAttribute="top" constant="10" id="Nhe-W6-AwD"/>
                             <constraint firstItem="dYk-YZ-F2X" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="Psp-IG-v9j"/>
-                            <constraint firstItem="7qF-ve-yFy" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="QGb-ig-3ex"/>
+                            <constraint firstItem="7qF-ve-yFy" firstAttribute="centerX" secondItem="Qqy-Lr-eU7" secondAttribute="centerX" id="Sch-1C-4vc"/>
+                            <constraint firstAttribute="trailing" secondItem="Qqy-Lr-eU7" secondAttribute="trailing" constant="10" id="U9d-2I-Agq"/>
                             <constraint firstItem="LrV-6C-x9X" firstAttribute="top" secondItem="l0O-E9-8FM" secondAttribute="top" constant="8" id="dFe-Fl-hUD"/>
                             <constraint firstItem="B0g-yS-hPA" firstAttribute="leading" secondItem="l0O-E9-8FM" secondAttribute="leading" constant="8" id="foc-ly-BUs"/>
                             <constraint firstItem="u0A-Yb-xpw" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="gm1-r5-qsP"/>
@@ -69,7 +70,6 @@
                             <constraint firstItem="u0A-Yb-xpw" firstAttribute="bottom" secondItem="LrV-6C-x9X" secondAttribute="bottom" id="koF-vG-L1b"/>
                             <constraint firstItem="B0g-yS-hPA" firstAttribute="top" secondItem="l0O-E9-8FM" secondAttribute="top" constant="8" id="l2n-Pk-sRj"/>
                             <constraint firstItem="u0A-Yb-xpw" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="lOW-zZ-A4b"/>
-                            <constraint firstItem="Qqy-Lr-eU7" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="mRV-tk-aYe"/>
                             <constraint firstItem="LrV-6C-x9X" firstAttribute="leading" secondItem="B0g-yS-hPA" secondAttribute="trailing" constant="8" id="raV-0L-4w8"/>
                             <constraint firstAttribute="bottom" secondItem="LrV-6C-x9X" secondAttribute="bottom" constant="8" id="sBf-uK-f9l"/>
                             <constraint firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" constant="8" id="xha-Du-P04"/>
@@ -88,4 +88,7 @@
             <point key="canvasLocation" x="1007" y="876"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="enlarge-icon" width="41" height="42"/>
+    </resources>
 </document>
