--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -82,20 +82,6 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
-                            <button translatesAutoresizingMaskIntoConstraints="NO" id="XCO-vm-Fbg">
-                                <rect key="frame" x="416" y="559" width="140" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Y6K-Mr-ied"/>
-                                    <constraint firstAttribute="width" constant="140" id="eQ7-Ii-eJG"/>
-                                </constraints>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="hide-related-items" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="gf8-fI-nx4">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="toggleRelatedItems:" target="7oi-8d-QFD" id="Wum-2F-Gf2"/>
-                                </connections>
-                            </button>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="83q-cx-wcX" userLabel="contentView">
                                 <rect key="frame" x="0.0" y="0.0" width="416" height="599"/>
                                 <subviews>
@@ -106,10 +92,10 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <view translatesAutoresizingMaskIntoConstraints="NO" id="Bws-Xv-6hl">
-                                                    <rect key="frame" x="0.0" y="0.0" width="400" height="340"/>
+                                                    <rect key="frame" x="0.0" y="-20" width="400" height="320"/>
                                                     <subviews>
-                                                        <stackView distribution="equalSpacing" orientation="vertical" alignment="leading" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" placeholderIntrinsicWidth="404" placeholderIntrinsicHeight="300" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RgY-ah-SAv">
-                                                            <rect key="frame" x="0.0" y="0.0" width="400" height="340"/>
+                                                        <stackView distribution="fillProportionally" orientation="vertical" alignment="leading" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" placeholderIntrinsicWidth="404" placeholderIntrinsicHeight="320" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RgY-ah-SAv">
+                                                            <rect key="frame" x="0.0" y="0.0" width="400" height="320"/>
                                                         </stackView>
                                                     </subviews>
                                                     <constraints>
@@ -136,30 +122,16 @@
                                             <rect key="frame" x="0.0" y="324" width="400" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="WJp-14-XQg">
-                                            <rect key="frame" x="384" y="0.0" width="16" height="340"/>
+                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="WJp-14-XQg">
+                                            <rect key="frame" x="384" y="0.0" width="16" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="Suh-ao-CzL">
-                                        <rect key="frame" x="386" y="569" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="hJi-BY-bbt"/>
-                                            <constraint firstAttribute="height" constant="20" id="pL8-Af-vie"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="plus-icon" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="fCb-ga-OiC">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="toggleRelatedItems:" target="7oi-8d-QFD" id="amL-BR-yoe"/>
-                                        </connections>
-                                    </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="Gya-dz-hCa">
                                         <rect key="frame" x="10" y="569" width="20" height="20"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="JQp-mN-BIW"/>
-                                            <constraint firstAttribute="width" constant="20" id="j08-HQ-7fn"/>
+                                            <constraint firstAttribute="width" constant="20" id="8Xf-0i-YLe"/>
+                                            <constraint firstAttribute="height" constant="20" id="g9u-QV-Pp7"/>
                                         </constraints>
                                         <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="close-record" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="fCW-An-35g">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -169,13 +141,6 @@
                                             <action selector="closeWindowTapped:" target="7oi-8d-QFD" id="Hls-Py-02a"/>
                                         </connections>
                                     </button>
-                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="uhV-2F-c5f">
-                                        <rect key="frame" x="0.0" y="559" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="79s-VE-roa"/>
-                                            <constraint firstAttribute="width" constant="40" id="Inv-Su-QOl"/>
-                                        </constraints>
-                                    </customView>
                                     <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufY-Kg-vBR">
                                         <rect key="frame" x="8" y="351" width="400" height="200"/>
                                         <clipView key="contentView" drawsBackground="NO" id="IhY-hb-dfg">
@@ -209,43 +174,74 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="uhV-2F-c5f">
+                                        <rect key="frame" x="0.0" y="559" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="79s-VE-roa"/>
+                                            <constraint firstAttribute="width" constant="40" id="Inv-Su-QOl"/>
+                                        </constraints>
+                                    </customView>
+                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="5qz-4l-1Hr">
+                                        <rect key="frame" x="386" y="569" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="OyM-v5-Nes"/>
+                                            <constraint firstAttribute="height" constant="20" id="Q5o-Ba-NQS"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="plus-icon" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="0az-Uw-zcX">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="ng9-0N-mwq">
                                         <rect key="frame" x="376" y="559" width="40" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="0tt-mh-Wyb"/>
-                                            <constraint firstAttribute="height" constant="40" id="dkw-lq-6SS"/>
+                                            <constraint firstAttribute="width" constant="40" id="FMQ-2A-Qlq"/>
+                                            <constraint firstAttribute="height" constant="40" id="kNH-V9-h1s"/>
                                         </constraints>
                                     </customView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="5qz-4l-1Hr" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="10" id="0jx-Lv-UHm"/>
                                     <constraint firstAttribute="bottom" secondItem="FBg-bp-lkB" secondAttribute="bottom" constant="8" id="1w4-2t-1qL"/>
                                     <constraint firstAttribute="trailing" secondItem="FBg-bp-lkB" secondAttribute="trailing" constant="8" id="3e3-h1-L7H"/>
+                                    <constraint firstItem="uhV-2F-c5f" firstAttribute="centerX" secondItem="Gya-dz-hCa" secondAttribute="centerX" id="8JL-H1-mR4"/>
+                                    <constraint firstAttribute="trailing" secondItem="5qz-4l-1Hr" secondAttribute="trailing" constant="10" id="8bI-vY-boV"/>
+                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="centerX" secondItem="5qz-4l-1Hr" secondAttribute="centerX" id="9eX-tT-geU"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="8" id="CBg-hb-EdH"/>
-                                    <constraint firstItem="Gya-dz-hCa" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="10" id="ERN-yA-gck"/>
-                                    <constraint firstItem="Suh-ao-CzL" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="10" id="GZt-fc-XSf"/>
-                                    <constraint firstItem="Gya-dz-hCa" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="10" id="HNY-kO-apr"/>
-                                    <constraint firstItem="uhV-2F-c5f" firstAttribute="centerX" secondItem="Gya-dz-hCa" secondAttribute="centerX" id="WbA-9G-wZr"/>
-                                    <constraint firstAttribute="trailing" secondItem="Suh-ao-CzL" secondAttribute="trailing" constant="10" id="XI2-tg-Jeg"/>
-                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="centerY" secondItem="Suh-ao-CzL" secondAttribute="centerY" id="diK-W6-hAf"/>
+                                    <constraint firstItem="Gya-dz-hCa" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="10" id="Hgu-Oa-4zd"/>
+                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="centerY" secondItem="5qz-4l-1Hr" secondAttribute="centerY" id="KIL-FP-e61"/>
+                                    <constraint firstItem="Gya-dz-hCa" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="10" id="bmm-m9-tt9"/>
                                     <constraint firstItem="FBg-bp-lkB" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="8" id="fiA-kL-6Ij"/>
                                     <constraint firstAttribute="width" constant="416" id="gCO-Bx-Eu3"/>
-                                    <constraint firstItem="uhV-2F-c5f" firstAttribute="centerY" secondItem="Gya-dz-hCa" secondAttribute="centerY" id="i6T-w5-dMj"/>
                                     <constraint firstAttribute="trailing" secondItem="ufY-Kg-vBR" secondAttribute="trailing" constant="8" id="isU-1a-I8R"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="48" id="ktu-Si-a2l"/>
-                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="centerX" secondItem="Suh-ao-CzL" secondAttribute="centerX" id="q14-vt-LIh"/>
+                                    <constraint firstItem="uhV-2F-c5f" firstAttribute="centerY" secondItem="Gya-dz-hCa" secondAttribute="centerY" id="u5P-gQ-IRj"/>
                                 </constraints>
                             </customView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="XCO-vm-Fbg">
+                                <rect key="frame" x="416" y="559" width="140" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Y6K-Mr-ied"/>
+                                    <constraint firstAttribute="width" constant="140" id="eQ7-Ii-eJG"/>
+                                </constraints>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="hide-related-items" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="gf8-fI-nx4">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="toggleRelatedItems:" target="7oi-8d-QFD" id="Wum-2F-Gf2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="83q-cx-wcX" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="9fe-gB-ueE"/>
                             <constraint firstAttribute="trailing" secondItem="vNQ-tt-E3O" secondAttribute="trailing" constant="8" id="Aii-Q7-tU9"/>
                             <constraint firstItem="83q-cx-wcX" firstAttribute="leading" secondItem="i2Z-RE-f6z" secondAttribute="leading" id="Kp5-K5-vf4"/>
-                            <constraint firstItem="XCO-vm-Fbg" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="trailing" id="USN-1v-jMm"/>
-                            <constraint firstItem="XCO-vm-Fbg" firstAttribute="trailing" secondItem="cKY-nL-NPV" secondAttribute="trailing" priority="250" id="X6c-Ug-ou8"/>
+                            <constraint firstItem="XCO-vm-Fbg" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="trailing" id="SJP-5Q-mql"/>
                             <constraint firstAttribute="bottom" secondItem="83q-cx-wcX" secondAttribute="bottom" id="Y1m-b0-aom"/>
                             <constraint firstItem="vNQ-tt-E3O" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" constant="50" id="gig-iq-fgE"/>
+                            <constraint firstItem="XCO-vm-Fbg" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="nCV-qN-JRQ"/>
                             <constraint firstAttribute="bottom" secondItem="vNQ-tt-E3O" secondAttribute="bottom" constant="8" id="tiB-iW-BCV"/>
-                            <constraint firstItem="XCO-vm-Fbg" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="v4e-KK-S9y"/>
                         </constraints>
                     </view>
                     <connections>
